# RustAutoScoreEngine

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  SETTINGS.md  cert.pem  index.html  key.pem
dataset/: labels.pkl
src/: args.rs  config.rs  data.rs  inference.rs  lib.rs  loss.rs  main.rs  model.rs  scoring.rs  server.rs  tests.rs  train.rs  wasm_bridge.rs  yolo_ort.rs
static/: index.html
tests/: memory_leak_test.rs
tools/: labeler_v8.py
